--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,12 @@ p{
     justify-content: center;
 }
 
+#imagens{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 #imagens .galeria {
     display: flex;
     max-width: 1200px;
